<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/my_cafe"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/name"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/customer_name"
                android:textSize="16sp"
               />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/customer_email"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/toppings"
                android:textAllCaps="true"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/whipped_cream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whipped_cream"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/chocolate_cream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/chocolate_cream"
                android:textSize="16sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/quantity"
                android:textAllCaps="true"
                android:textSize="20sp"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <Button
                    android:id="@+id/minus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:text="-"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="1"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/plus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:text="+"
                    android:textAlignment="center"
                    android:textSize="16sp">

                </Button>


            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/price"
                android:textAllCaps="true"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="$5.0"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:id="@+id/order_summary_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/send_order_summary" />


                <TextView
                    android:id="@+id/linkedIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/made_by_shashank_sharma"
                    android:textSize="14sp"
                    android:textColor="#153453"
                    android:layout_marginEnd="16dp"
                    android:layout_gravity="end"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginTop="35dp"
                    />
        </LinearLayout>

    </ScrollView>


</LinearLayout>